# RL-book

./: .dir-locals.el  .envrc  .gitignore  .pycheckers  .pylintrc  .travis.yml  INDEXING.md  README.md  chapter2.md  default.nix  example.md  latex.template  mypy.ini  notebook-requirements.txt  requirements.txt  setup.cfg  shell.nix  structure  todo.md
appendix1/: appendix1.md
appendix2/: appendix2.md
appendix3/: appendix3.md
appendix4/: appendix4.md
appendix5/: appendix5.md
appendix6/: appendix6.md
appendix7/: appendix7.md
assignment 11/: Assignment10.ipynb  Assignment11.ipynb
assignment 13/: Assignment13.ipynb
assignment 14/: Least Sqaure Technique with Recursion.ipynb
assignment 15/: Assignment15.ipynb
assignment 16/: Assignment16.ipynb
assignment 2/: Assignment2.ipynb
assignment 3/: Assignment3.ipynb
assignment 5/: Assignment5.ipynb
assignment 6/: Assignment6.ipynb
assignment 7/: Assignment7.ipynb
assignment 8/: Assignment8.ipynb
assignment 9/: Assignment9.ipynb
assignment12/: Assignment12.ipynb
assignment14/: Assignment14.ipynb  Least Square Technique without Recursion.ipynb
assignment2/: Assignment2.ipynb
assignment3/: Assignment3.ipynb
assignment4/: Assignment4.ipynb
assignments/: assignment4.py  assignment5_2.py  assignment5_ob.py  assignment6_2.py  assignment6_3.py  assignment7_2.py  midterm.py  snakes_and_ladders.py
book/: README.md  abstracts.md  assignment3.py  bibliography.bib  front_matter.md
chapter0/: chapter0.md
chapter1/: chapter1.md
chapter10/: chapter10.md
chapter11/: chapter11.md  q_learning.gv  sarsa.gv
chapter12/: chapter12.md
chapter13/: chapter13.md
chapter14/: chapter14.md
chapter15/: chapter15.md  planning_learning.gv
chapter16/: chapter16.md
chapter2/: chapter2.md  inventory.md  mrp_bellman_tree.gv  simple_inv_mdp.gv  simple_inv_mp.gv  simple_inv_mrp.gv
chapter3/: chapter3.md  (+3 more)
haskell/: .dir-locals.el  Main.hs  brittany.yaml  default.nix  haskell.cabal  rl-book.cabal  shell.nix
haskell/nix/: sources.json
haskell/src/RL/: Approx.hs  FunctionApproximation.hs  Iterate.hs  Matrix.hs  Probability.hs  Vector.hs  Within.hs
haskell/src/RL/Approx/: Approx.hs  Dynamic.hs  Linear.hs  NeuralNet.hs  Tabular.hs  Weights.hs
haskell/src/RL/Process/: DynamicProgramming.hs  Finite.hs  FunctionApproximation.hs  Markov.hs
haskell/src/RL/Solve/: Approximate.hs  Dynamic.hs
haskell/test/: Test.hs
haskell/test/Test/: Assert.hs  Processes.hs
haskell/test/Test/RL/: Iterate.hs  Matrix.hs  Probability.hs
haskell/test/Test/RL/Process/: DynamicProgramming.hs
haskell/test/Test/RL/Solve/: Approximate.hs  Dynamic.hs
(+170 files in other folders)
